<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Signup">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/signUpNavHost"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_blue_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_naccount"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/entrer_votre_nom"
            android:inputType="text"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/emailSignUp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/entrer_voter_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordSignUp"
            android:layout_marginTop="32dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/entrer_votre_mot_de_passe"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirmPasswordId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/roleSignUp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/roleGotten"
            android:textColor="#000000"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/txtfieliere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Filiere"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/filiere"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="Filiere"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:prompt="@string/select_field"
            android:visibility="gone"/>



        <TextView
            android:id="@+id/txtgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Groupe"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/groupe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="Groupe"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp"
            android:prompt="@string/select_group"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_blue"
                android:text="@string/signupBtn"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginLien"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="62dp"
            android:layout_gravity="center"
            android:background="@drawable/background_blue"
            android:text="@string/se_connecterLiien"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:visibility="gone"
            android:layout_marginStart="150dp"
            android:layout_marginTop="300dp"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>