<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="7dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        android:background="@color/white"
        app:strokeColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/userName"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userNameRequest"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/userRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userRoleRequest"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                  />
                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userEmailRequest"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                     />

            </LinearLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_gravity="center"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins_italic"
                android:text="@string/userStatutRequest"
                android:textSize="12dp"
                android:id="@+id/checkboxId"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
