<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/user_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="16dp"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_margin="20dp"
        app:strokeColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="25dp"
        android:id="@+id/create_course_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        android:backgroundTint="@color/cardColorOfTeacher"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="Fillière : "/>
        <Spinner
            android:id="@+id/field_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/background_input"
            android:prompt="@string/select_field" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:text="Matière : "/>

        <Spinner
            android:id="@+id/subject_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/background_input"
            android:prompt="@string/select_subject"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginTop="20dp"
                android:text="Groupe : "/>

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:prompt="@string/select_group"/>

        <EditText
            android:id="@+id/course_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/course_name"
            android:background="@drawable/background_input"
            android:layout_marginTop="20dp"
            android:inputType="text" />

        <EditText
            android:padding="10dp"
            android:id="@+id/course_notes_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:hint="@string/course_notes"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_video_button"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_blue"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/select_video" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_pdf_button"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_blue"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/select_pdf" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upload_course_button"
            android:background="@drawable/background_blue"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/upload_course" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView

        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_course_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rvTeacher"/>

    <fragment
        android:id="@+id/teacherNavHost"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/my_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
